--- a/styles/utility.css
+++ b/styles/utility.css
@@ -8,9 +8,35 @@
   grid-auto-flow: column;
 }
 
-.grid-cols-1 {
+.grid-cols-intro {
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
+}
+
+.grid-cols-cards {
+  grid-template-columns: repeat(3, 330px);
+  column-gap: 24px;
+  row-gap: 24px;
+  grid-auto-rows: min-content;
+}
+
+.grid-cols-services {
+  grid-template-columns: repeat(3, 330px);
+  column-gap: 24px;
+  row-gap: 24px;
+  grid-auto-rows: min-content;
+}
+
+.grid-column-1 {
+  grid-column: 1;
+}
+
+.grid-column-2 {
+  grid-column: 2;
+}
+
+.grid-column-3 {
+  grid-column: 3;
 }
 
 .title-lg {
@@ -20,10 +46,12 @@
 
 .title-md {
   font: var(--title-md);
+  color: var(--gray-600);
 }
 
 .title-sm {
   font: var(--title-sm);
+  color: var(--gray-600);
 }
 
 .subtitle {
