--- a/styles/utility.css
+++ b/styles/utility.css
@@ -4,6 +4,10 @@
   display: grid;
 }
 
+.flex {
+  display: flex;
+}
+
 .grid-flow-col {
   grid-auto-flow: column;
 }
@@ -24,6 +28,11 @@
   grid-template-columns: repeat(3, 330px);
   column-gap: 24px;
   row-gap: 24px;
+  grid-auto-rows: min-content;
+}
+
+.grid-cols-contact {
+  grid-template-columns: 1fr;
   grid-auto-rows: min-content;
 }
 
@@ -69,6 +78,15 @@
   color: var(--gray-400);
 }
 
+.text-medium {
+  font: var(--text-medium);
+  color: var(--gray-500);
+}
+
 .text-red {
   color: var(--red);
+}
+
+.text-purple {
+  color: var(--purple);
 }
